Compositing, fix scaling on non-aligned images

--- a/src/style.scss
+++ b/src/style.scss
@@ -96,3 +96,17 @@ input.no-arrows {
 .no-border {
   border:0
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+  pointer-events: none;
+
+  .selected & {
+      border: 3px solid red;
+  }
+}
